# rustracer

./: .gitignore  Cargo.toml  README.md
src/: aabb.rs  bvh.rs  camera.rs  main.rs  material.rs  models.rs  renderer.rs  utils.rs  vector.rs
src/types/: camera.rs  material.rs  mod.rs  ray.rs  solid_object.rs  vector.rs
